edicion de nombre en package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "grupo_6_Zapatillas",
+  "name": "grupo_6_zapatillas",
   "version": "1.0.0",
   "description": ">El sitio de zapatillas que estamos diseñando está orientado a todo tipo de consumidores, ya sea que necesiten un calzado deportivo o algo con un estilo urbano/casual.\r Buscamos desarrollar un site que sea funcional para los usuarios, con un diseño agradable y buena usabilidad.",
   "main": "app.js",
